WAMULAT-16:  Added logging for command execution